Update dependencies, fix javadoc errors, OAuth refactor